--- a/nosotros.html
+++ b/nosotros.html
@@ -40,14 +40,16 @@
     <div class="container">
         <h1>Nosotros</h1>
         <div class="text-center" >
-            <img src="https://www.gannett-cdn.com/presto/2022/02/17/NABJ/9f2016aa-be3c-4dbb-a1cb-0de34fb5a69e-Coyote_Acme_Warner_Bros..jpg">
+            <img src="https://images.cobot.me/uploads/space/logo/space-wecode/pdf_ab211233b6576dbb0f8b5826447eeac61e2a833a99ac5d788fbc1a174c3c6ce5.png">
         </div>
-        <h1>¿Quienes Somos?</h1>
+        <h1>Nuestro equipo</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum earum maiores quibusdam quo praesentium vitae voluptatem, temporibus adipisci! Vero nisi qui aut aliquam nobis perferendis nostrum fugiat fuga minima tempora.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sint enim, corporis maxime voluptates nulla ratione ipsam, quaerat quis vitae iste, iusto modi omnis! Neque delectus nihil ipsa optio maiores.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, harum perspiciatis. Exercitationem nisi, sunt facilis ipsa quae soluta autem, enim aliquid, et nemo sit in nihil. Molestias nemo saepe reprehenderit?
-        </p>
-    </div> 
+          Nuestra empresa de asesoría de software está compuesta por un equipo de expertos en tecnología y desarrollo de software. Nos enorgullece contar con ingenieros en sistemas, programadores, diseñadores y especialistas en marketing digital, que trabajan juntos para ofrecer soluciones de software personalizadas y eficaces a nuestros clientes.</p>
+        <h1>Misión</h1>
+        <p>
+          Nuestra misión es proporcionar servicios de asesoría y desarrollo de software de alta calidad a nuestros clientes. Nos esforzamos por entender las necesidades de nuestros clientes y ofrecer soluciones personalizadas que les permitan mejorar sus procesos, aumentar su productividad y obtener una ventaja competitiva en su mercado.</p>
+        <h1>Vision</h1>
+        <p>
+          Nuestra visión es convertirnos en líderes en el mercado de la asesoría y desarrollo de software, a través de la innovación constante y la mejora continua de nuestros procesos y servicios. Buscamos ser reconocidos por nuestra excelencia en el servicio al cliente y por la calidad de nuestras soluciones de software.</p>
 </body>
 </html>
